--- a/src/main/webapp/hr/hr_report_staff_over_time.xhtml
+++ b/src/main/webapp/hr/hr_report_staff_over_time.xhtml
@@ -69,6 +69,8 @@
                             <p:dataTable id="tb1" value="#{hrReportController.staffSalarys}" var="ss">
                                 <f:facet name="header">
                                     <h:outputLabel style="font-size: 20px  " value="Staff Over Time"/>
+                                    <br/>
+                                    <h:outputLabel value="#{hrReportController.reportKeyWord.salaryCycle.name}" />
                                     <h:panelGroup rendered="#{hrReportController.reportKeyWord.institution ne null}" >
                                         <br/>
                                         <h:outputLabel value="#{hrReportController.reportKeyWord.institution.name}" />
@@ -126,7 +128,7 @@
                                         <h:outputLabel value="Rate Per Minute"  />
                                     </f:facet>
                                     <p:outputLabel value="#{ss.rpmWithMutiplingFactor1_5}">
-                                        
+
                                     </p:outputLabel>
                                     <f:facet name="footer">
                                         <h:outputLabel style="text-align: right;" value="#{hrReportController.totalRatePerMinut}">
@@ -168,7 +170,7 @@
                                     <f:facet name="footer">
                                     </f:facet>
                                 </p:column>
-                                
+
                                 <p:column  style="text-align: right;" rendered="#{webUserController.hasPrivilege('Developers')}">
                                     <f:facet name="header">
                                         <h:outputLabel value="Normal OT Value(C) diff"  />
@@ -189,7 +191,7 @@
                                     </p:outputLabel>
                                     <f:facet name="footer">
                                         <h:outputLabel style="text-align: right;" value="#{hrReportController.totalOtValue}">
-
+                                            <f:convertNumber pattern="0.00" />
                                         </h:outputLabel>
                                     </f:facet>
                                 </p:column>
@@ -259,8 +261,9 @@
                                         <f:convertNumber pattern="0.00" />
                                     </p:outputLabel>
                                     <f:facet name="footer">
-                                        <h:outputLabel style="text-align: right;" value="#{hrReportController.totalRatePerMinuts}">                                            
-                                        </h:outputLabel>
+<!--                                        <h:outputLabel style="text-align: right;" value="#{hrReportController.totalRatePerMinuts}">
+                                            <f:convertNumber pattern="0.00" />
+                                        </h:outputLabel>-->
                                     </f:facet>
                                 </p:column>
                                 <p:column headerText="OFF DAY OT Value" style="text-align: right;">
