--- a/src/main/webapp/reportInstitution/report_opd_service_summery.xhtml
+++ b/src/main/webapp/reportInstitution/report_opd_service_summery.xhtml
@@ -131,7 +131,7 @@
                         <p:outputLabel value="Date"/>
                     </f:facet>
                     <h:outputLabel value="#{d.billItem.createdAt}">
-                        <f:convertDateTime pattern="dd MMMM yyyy"/>
+                        <f:convertDateTime pattern="dd MMMM yyyy hh:mm a"/>
                     </h:outputLabel>
                 </p:column>
 
