--- a/src/main/webapp/reportInstitution/report_opd_service_summery_by_category.xhtml
+++ b/src/main/webapp/reportInstitution/report_opd_service_summery_by_category.xhtml
@@ -86,7 +86,7 @@
                         <h:outputLabel value="Date" />
                     </f:facet>
                     <h:outputLabel value="#{d.billItem.createdAt}">
-                        <f:convertDateTime pattern="dd MMMM yyyy"/>
+                        <f:convertDateTime pattern="dd MMMM yyyy hh:mm a"/>
                     </h:outputLabel>
                 </p:column>
 
