--- a/src/main/webapp/resources/ezcomp/preferences.xhtml
+++ b/src/main/webapp/resources/ezcomp/preferences.xhtml
@@ -54,6 +54,7 @@
                     <p:inputTextarea value="#{sessionController.currentPreference.pharmacyBillFooter}" />
                     <h:outputLabel value="Pharmacy Bill Paper" ></h:outputLabel>
                     <p:selectOneMenu value="#{sessionController.currentPreference.pharmacyBillPaperType}" >
+                        <f:selectItem itemLabel="Please Select Paper Type" />
                         <f:selectItems value="#{enumController.paperTypes}" ></f:selectItems>
                     </p:selectOneMenu>
                     <h:outputLabel value="GRN Detaied" ></h:outputLabel>
@@ -82,6 +83,7 @@
                     <h:selectBooleanCheckbox value="#{sessionController.currentPreference.printLabelForOPdBill}" ></h:selectBooleanCheckbox>
                     <h:outputLabel value="OPD Bill Paper" ></h:outputLabel>
                     <p:selectOneMenu value="#{sessionController.currentPreference.opdBillPaperType}" >
+                        <f:selectItem itemLabel="Please Select Paper Type" />
                         <f:selectItems value="#{enumController.paperTypes}" ></f:selectItems>
                     </p:selectOneMenu>
                     <h:outputLabel value="Partial Payment of OPD Bills allowed" ></h:outputLabel>
