--- a/src/main/webapp/channel/channel_doctor_view.xhtml
+++ b/src/main/webapp/channel/channel_doctor_view.xhtml
@@ -35,7 +35,7 @@
 
                     <p:column headerText="Paid or Not">
                         <p:outputLabel rendered="#{bs.bill.balance ne 0.0}" value="Credit" style="color: red;"/>
-                        <p:outputLabel rendered="#{bs.bill.balance eq 0.0}" value="Paid"/>
+                        <p:outputLabel rendered="#{bs.bill.balance eq 0.0}" value="Paid" style="color: green;"/>
                     </p:column> 
 
                     <p:column headerText="Bill Type">
