--- a/src/main/webapp/memberShip/payment_method_discount_opd_by_item.xhtml
+++ b/src/main/webapp/memberShip/payment_method_discount_opd_by_item.xhtml
@@ -71,9 +71,9 @@
                                                     completeMethod="#{itemController.completeItem}"
                                                     converter="itemcon"
                                                     var="cat" 
-                                                    itemLabel="#{cat.name}" 
-                                                    itemValue="#{cat}">                                   
-                                    </p:autoComplete>
+                                                    itemLabel="#{cat.item.name}" 
+                                                    itemValue="#{cat}"/>                                   
+                                    
                                 </p:column>
 
                                 <p:column headerText="Payment Method">
