Signed-off-by: Ruhunu <ruhunu@192.168.122.221>

--- a/src/main/webapp/inward/pharmacy_reprint_bill_sale_bht.xhtml
+++ b/src/main/webapp/inward/pharmacy_reprint_bill_sale_bht.xhtml
@@ -174,10 +174,10 @@
 
                             </h:panelGroup>
 
-                            <h:panelGroup id="gpBillPreviewFiveFive" rendered="#{sessionController.institutionPreference.pharmacyBillPaperType eq 'FiveFivePaper'}"> 
+                            <h:panelGroup id="gpBillPreviewFiveFive" rendered="true"> 
 
                                 <div >
-                                    <h:panelGroup rendered="#{sessionController.institutionPreference.pharmacyBillPrabodha eq false}" > 
+                                    <h:panelGroup rendered="true" > 
                                         <phi:saleBill_five_five bill="#{pharmacyBillSearch.bill}"></phi:saleBill_five_five>
                                     </h:panelGroup>
                                 </div>
