--- a/src/main/webapp/resources/cashier/opdBilled.xhtml
+++ b/src/main/webapp/resources/cashier/opdBilled.xhtml
@@ -24,6 +24,8 @@
                 </f:facet> 
                 <h:outputLabel value="#{b.deptId}" >
                 </h:outputLabel>
+                <h:outputLabel value=" - #{b.insId}" >
+                </h:outputLabel>
             </p:column>
             <p:column headerText="Time"   style=" text-align: right">
                 <f:facet name="header">  
