Signed-off-by: Ruhunu <ruhunu@192.168.122.221>

--- a/src/main/webapp/lab_search_for_reporting_ondemand.xhtml
+++ b/src/main/webapp/lab_search_for_reporting_ondemand.xhtml
@@ -47,7 +47,7 @@
 
                             <p:column  headerText="Bill" styleClass="alignTop" >
                                 <h:outputLabel id="lblBillNo" 
-                                               value="#{pi.billItem.bill.deptId}" 
+                                               value="#{pi.billItem.bill.insId}" 
                                                styleClass="#{pi.billItem.bill.cancelled or pi.billItem.bill.refunded ? 'redtext':''}"></h:outputLabel>
                                 <p:tooltip for="lblBillNo"  >
                                     <h:outputLabel value="Bill No : #{pi.billItem.bill.insId}" ></h:outputLabel>
